--- a/templates/models.tmpl
+++ b/templates/models.tmpl
@@ -7,7 +7,7 @@ import (
 
 {{range $key, $v := .Vertices}}
 	type {{$v.Name}} struct {
-	gorm.Models
+	gorm.Model
 	{{range $key, $c := $v.Cols}}
 		{{ $c.Name }} {{ $c.Type }} {{ $c.GetMeta }}
 	{{- end}}
